--- a/server/public/index.html
+++ b/server/public/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link href="index.css" type="text/css" rel="stylesheet">
     <title>Chatroom</title>
   </head>
   <body>
