adds initial styling

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link href="index.css" type="text/css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
     <title>Chatroom</title>
   </head>
   <body>
